--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^8.3"
+        "php": "^8.3",
+        "symfony/console": "^7.3",
+        "symfony/process": "^7.3",
+        "symfony/filesystem": "^7.3"
     }
 }
