--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,16 @@
         "php": "^8.3",
         "symfony/console": "^7.3",
         "symfony/process": "^7.3",
-        "symfony/filesystem": "^7.3"
+        "symfony/filesystem": "^7.3",
+        "symfony/finder": "^7.3",
+        "ratchet/pawl": "^0.4.3",
+        "symfony/http-foundation": "^7.3"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^12.3",
+        "friendsofphp/php-cs-fixer": "^3.86",
+        "squizlabs/php_codesniffer": "^3.13",
+        "vimeo/psalm": "^6.5"
     }
 }
