--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^12.3",
         "friendsofphp/php-cs-fixer": "^3.86",
-        "squizlabs/php_codesniffer": "^3.13",
-        "vimeo/psalm": "^6.5"
-    }
+        "squizlabs/php_codesniffer": "^3.13"
+    },
+    "prefer-stable": true
 }
