--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,7 @@
 /tests          export-ignore
 /node_modules   export-ignore
 /vendor         export-ignore
+/art            export-ignore
 
 # Exclude tooling configs
 /.editorconfig      export-ignore
