--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,10 @@
             "@unit"
         ]
     },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
     "minimum-stability": "dev",
     "prefer-stable": true
 }
